production/hubot/50.Deployment.yml
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pgadmin4
  namespace: pgadmin4
  labels:
    app.kubernetes.io/component: pgadmin4
    app.kubernetes.io/name: pgadmin4
  annotations:
    deployment.kubernetes.io/revision: '1'
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/component: pgadmin4
      app.kubernetes.io/name: pgadmin4
  template:
    metadata:
      labels:
        app.kubernetes.io/component: pgadmin4
        app.kubernetes.io/name: pgadmin4
    spec:
      volumes:
        - name: storage
          emptyDir: {}
      containers:
        - name: pgadmin4
          image:  s2.ubuntu.home:5000/thirdparty/pgadmin4:6.7
          ports:
            - name: pgadmin4
              containerPort: 80
              protocol: TCP
          resources:
            limits:
              cpu: 200m
              memory: 200Mi
            requests:
              cpu: 100m
              memory: 100Mi
          volumeMounts:
            - name: storage
              mountPath: /var/lib/pgadmin
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
          imagePullPolicy: IfNotPresent 
      restartPolicy: Always
      terminationGracePeriodSeconds: 30
      dnsPolicy: ClusterFirst
      nodeSelector:
        kubernetes.io/os: linux
      serviceAccountName: pgadmin4
      serviceAccount: pgadmin4
      schedulerName: default-scheduler
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 25%
      maxSurge: 25%
  revisionHistoryLimit: 10
  progressDeadlineSeconds: 600
