production/hubot/60.Service.yml
apiVersion: v1
kind: Service
metadata:
  name: hubot
  namespace: hubot
  labels:
    app.kubernetes.io/component: hubot
    app.kubernetes.io/name: hubot
spec:
  ports:
    - name: https
      protocol: TCP
      port: 80
      targetPort: hubot 
  selector:
    app.kubernetes.io/component: hubot
    app.kubernetes.io/name: hubot
  sessionAffinity: None
  type: LoadBalancer
status:
  loadBalancer: {}
